--- a/recipe.css
+++ b/recipe.css
@@ -18,10 +18,33 @@ img {
   height: 320px;
   margin: 10px;
   display: block;
-  -webkit-filter: brightness(115%) saturate(85%);
-  -webkit-border-radius: 15px;
+   -webkit-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #aaa);
+  filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   object-fit: cover;
-  -webkit-filter: drop-shadow(15px 15px 10px #aaa);
+  border-radius: 15px;
+}
+
+.container {
+  width: 100%;
+  display: inline-block;
+}
+
+.img-container-medium {
+  height: 175px;
+  width: 275px;
+  overflow: hidden;
+}
+
+.img-container-medium {
+  height: 230px;
+  width: 380px;
+  overflow: hidden;
+}
+
+.img-container-large {
+  height: 330px;
+  width: 450px;
+  overflow: hidden;
 }
 
 h1 {
@@ -51,53 +74,86 @@ h3 {
 }
 
 .list {
-  background-color: #E4D7C2;
-  padding-top: 20px;
-  padding-bottom: 15px;
   border-radius: 10px;
   list-style-type: none;
 }
 
 .ingredient-list {
-  width: 55%;
+  background-color: #eee;
+  padding-top: 17px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  width: 100%;
 }
 
 .ingredient-list-item {
-  width: 500px;
-  -webkit-transition: all 1.3s ease;
   cursor: pointer;
+  display: inline;
+  margin: 10px;
+}
+
+.ingredient-text:hover {
+  color: #e07d80;
+}
+
+.ingredient-text {
+  display: none;
+  width: 50px;
+  background-color: #FFFDFA;
+  padding-left: 7px;
+  border-radius: 10px;
 }
 
 .ingredient-image {
   width: 60px;
   height: 60px;
   display: inline;
-  -webkit-filter: brightness(125%) saturate(85%);
-  -webkit-border-radius: 100%;
   object-fit: cover;
+  transition: all 1.3s ease;
+  border-radius: 100%;
+  -webkit-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
+  -moz-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa); /* don't need in firefox? */
+  filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
 }
 
-.ingredient-text {
-  position: relative;
-  bottom: 35px;
-  left: 10px;
-}
+/* right now in safari the drop-shadow blur is correct only during transition */
+/* maybe try doing this as a hover effect in css and see if it works any better?
+*/
+/* change to -list-hover if you leave as an effect on hover */
+/*.ingredient-list-click {
+  -webkit-transform: scale(1.6);
+  -moz-transform: scale(1.6);
+  transform: scale(1.6);
+  -webkit-transition: all 1.3s ease;
+  -moz-transition: all 1.3s ease;
+  transition: all 1.3s ease;
+}*/
 
-.ingredient-list-click {
-  width: 300px;
-  -webkit-transform: translateX(180px) scale(1.6);
-  -webkit-transition: all 1s ease;
+/* why did i change this to jquery anyway? */
+.ingredient-image:hover {
+  -webkit-transform: scale(1.6);
+  -moz-transform: scale(1.6);
+  transform: scale(1.6);
+  -webkit-transition: all 1.3s ease;
+  -moz-transition: all 1.3s ease;
+  transition: all 1.3s ease;
 }
 
 .equipment-list {
   width: 25%;
-  float: right;
-  text-align: right;
-  padding-right: 40px;
+  display: none;
 }
 
-.equipment-list-item {
-/*   height: 70px; */
+.brighten {
+  -webkit-filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
+  -moz-filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
+  filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
+}
+
+.dim {
+  -webkit-filter: brightness(70%);
+  -moz-filter: brightness(70%);
+  filter: brightness(70%);
 }
 
 .cook-time-info {
@@ -122,14 +178,6 @@ h3 {
 
 .process {
   width: 80%;
-}
-
-.process-div {
-
-}
-
-.brighten {
-  -webkit-filter: brightness(1.3);
 }
 
 header {
@@ -161,11 +209,11 @@ header {
   cursor: pointer;
 }
 
-.hidden {
-/*  visibility: hidden; */
+/* .hidden {
+ visibility: hidden;
   height: 0%;
   width: 0%;
-}
+} */
 
 li strong, li b {
   color: #e07d80;
@@ -178,4 +226,8 @@ a {
   font-weight: 600;
 }
 
-/*#ecdabf*/
+/*#moz-round-image {
+  width: 60px;
+  height: 60px;
+  background: url(./images/)
+}*/
