--- a/recipe.css
+++ b/recipe.css
@@ -9,8 +9,8 @@ body {
 }
 
 .main {
-  margin-right: 20px;
-  margin-left: 10px;
+  margin-right: 2%;
+  margin-left: 1%;
 }
 
 img {
@@ -18,7 +18,7 @@ img {
   height: 320px;
   margin: 10px;
   display: block;
-   -webkit-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #aaa);
+  -webkit-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
   filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   object-fit: cover;
   border-radius: 15px;
@@ -112,7 +112,8 @@ h3 {
   transition: all 1.3s ease;
   border-radius: 100%;
   -webkit-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
-  -moz-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa); /* don't need in firefox? */
+  /* don't need in firefox? */
+  -moz-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
 }
 
@@ -150,11 +151,11 @@ h3 {
   filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
 }
 
-.dim {
+/* .dim {
   -webkit-filter: brightness(70%);
   -moz-filter: brightness(70%);
   filter: brightness(70%);
-}
+} */
 
 .cook-time-info {
   margin: 60px 0px 40px 10px;
@@ -177,7 +178,40 @@ h3 {
 }
 
 .process {
-  width: 80%;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #eee;
+  border-radius: 10px;
+  padding-right: 2%;
+  padding-top: 0.1rem;
+  padding-left: 1%;
+  padding-bottom: 1rem;
+}
+
+.process-step {
+
+}
+
+.process li {
+/*   width: 50%; */
+  margin-bottom: 2rem;
+  text-align: justify;
+}
+
+/* .process-image {
+  display: inline;
+  height: 15rem;
+  width: 19rem;
+}
+ */
+.process-image-large {
+  position: relative;
+  height: 17rem;
+  width: 30rem;
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header {
