--- a/recipe.css
+++ b/recipe.css
@@ -84,24 +84,36 @@ h3 {
   padding-bottom: 10px;
   padding-left: 10px;
   width: 100%;
+  margin-bottom: 8rem;
 }
 
+/* .expanded-menu {
+  height: 12rem;
+  -webkit-transition: all 0.6s ease;
+} */
+
 .ingredient-list-item {
+  position: relative;
   cursor: pointer;
   display: inline;
   margin: 10px;
 }
 
-.ingredient-text:hover {
+.show-ingredient-text {
+  display: block;
+  position: absolute;
+  top: 50px;
+  left: 0px;
+  z-index: 100;
+  padding: 5px;
   color: #e07d80;
+  width: 100px;
+  background-color: #fff;
+  border-radius: 10px;
 }
 
 .ingredient-text {
   display: none;
-  width: 50px;
-  background-color: #FFFDFA;
-  padding-left: 7px;
-  border-radius: 10px;
 }
 
 .ingredient-image {
@@ -183,12 +195,7 @@ h3 {
   padding-bottom: 1rem;
 }
 
-.process-step {
-
-}
-
 .process li {
-/*   width: 50%; */
   margin-bottom: 2rem;
   text-align: justify;
 }
@@ -237,11 +244,11 @@ header {
   cursor: pointer;
 }
 
-/* .hidden {
- visibility: hidden;
-  height: 0%;
+ .hidden {
+/*  visibility: hidden;
+*/  height: 0%;
   width: 0%;
-} */
+} 
 
 li strong, li b {
   color: #e07d80;
