--- a/recipe.css
+++ b/recipe.css
@@ -87,14 +87,6 @@ h3 {
   margin-bottom: 3rem;
 }
 
-.ingredient-text-only-display {
-  width: 5rem;
-  text-align: left;
-  vertical-align: middle;
-  /* display: inline; */
-  font-size: 0.95rem;
-}
-
 /* .expanded-menu {
   height: 12rem;
   -webkit-transition: all 0.6s ease;
@@ -153,6 +145,14 @@ h3 {
   -webkit-transition: all 1.3s ease;
   -moz-transition: all 1.3s ease;
   transition: all 1.3s ease;
+}
+
+.ingredient-text-only-display {
+  display: inline-block;
+  width: 5rem;
+  text-align: left;
+  vertical-align: middle;
+  font-size: 0.95rem;
 }
 
 .equipment-list {
