--- a/recipe.css
+++ b/recipe.css
@@ -110,12 +110,16 @@ h3 {
   display: block;
   position: absolute;
   top: 50px;
-  left: 0px;
+  left: -1rem;
   z-index: 100;
-  padding: 5px;
-  color: #e07d80;
-  width: 100px;
-  background-color: #fff;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #773C03;
+  width: auto;
+  height: auto;
+  text-align: center;
+  vertical-align: center;
+  background-color: #ddd;
   border-radius: 10px;
 }
 
