--- a/recipe.css
+++ b/recipe.css
@@ -1,11 +1,10 @@
-body {
+html {
   background-color: hsla(34,31%,97%,1);
   /* background-color: #FFFDFA; */
-  font-family: Candara;
+  font-family: Helvetica, sans-serif;
   color: #773C03;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 100;
-  padding-left: 10px;
   line-height: 1.5;
 }
 
@@ -25,7 +24,7 @@ img {
   border-radius: 15px;
 }
 
-.container {
+/* .container {
   width: 100%;
   display: inline-block;
 }
@@ -46,6 +45,10 @@ img {
   height: 330px;
   width: 450px;
   overflow: hidden;
+} */
+
+h1, h2, h3, h4, #hide-images {
+  font-family: Didot, serif;
 }
 
 h1 {
@@ -87,11 +90,6 @@ h3 {
   width: 100%;
   margin-bottom: 3rem;
 }
-
-/* .expanded-menu {
-  height: 12rem;
-  -webkit-transition: all 0.6s ease;
-} */
 
 .ingredient-list-item {
   position: relative;
@@ -190,6 +188,10 @@ h3 {
   padding-top: 50px;
 }
 
+.process h3 {
+  text-align: center;
+}
+
 .process {
   width: 60%;
   margin-left: auto;
@@ -268,6 +270,29 @@ a {
   font-weight: 600;
 }
 
+.bookmark {
+  list-style-type: persian;
+}
+
+.bookmark-highlight {
+/*   background-color: #D8DECD; */
+  box-shadow: -3px -3px 2px #75494A;
+  border-radius: 10px;
+  padding: 0.3rem 0.4rem;
+}
+
+.bookmark-note {
+  font-size: 1.1rem;
+  text-transform: lowercase;
+  font-weight: 100;
+}
+
+.no-select {
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
 /*#moz-round-image {
   width: 60px;
   height: 60px;
