--- a/recipe.css
+++ b/recipe.css
@@ -247,7 +247,7 @@ header {
   z-index: 1;
   text-align: right;
   text-transform: uppercase;
-  padding-top: 10px;
+  padding-top: 15px;
   padding-right: 5px;
   opacity: 0.8;
   cursor: pointer;
@@ -270,29 +270,27 @@ a {
   font-weight: 600;
 }
 
-.bookmark {
-  list-style-type: persian;
+.slide-button {
+  width: 8rem;
+  text-align: center;
+  border: 0.1rem solid #bbb;
+  border-radius: 5px;
+  margin-bottom: 01rem;
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
 }
 
-.bookmark-highlight {
-/*   background-color: #D8DECD; */
-  box-shadow: -3px -3px 2px #75494A;
-  border-radius: 10px;
-  padding: 0.3rem 0.4rem;
+.slide-button:hover {
+  background-color: #DCC5C6;
 }
 
-.bookmark-note {
+ .bookmark-note {
   font-size: 1.1rem;
   text-transform: lowercase;
   font-weight: 100;
-}
+} 
 
-.no-select {
-  cursor: default;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
 /*#moz-round-image {
   width: 60px;
   height: 60px;
