--- a/recipe.css
+++ b/recipe.css
@@ -76,10 +76,6 @@ h3 {
   float: right;
 }
 
-.list {
-
-}
-
 .ingredient-list {
   border-radius: 10px;
   list-style-type: none;
@@ -156,7 +152,6 @@ h3 {
   text-align: left;
   vertical-align: top;
   font-size: 0.95rem;
-  font-weight: 600;
 }
 
 .equipment-list {
@@ -277,8 +272,8 @@ a {
   transform: rotateY(180deg);
 }
 
-.text-purchased {
-  font-weight: 100;
+.text-purchased:before {
+  content: '✓ ';
 }
 
 .ingredient-note {
