--- a/recipe.css
+++ b/recipe.css
@@ -1,5 +1,6 @@
 html {
-  background-color: hsla(34,31%,97%,1);
+/*   background-color: hsla(34,31%,97%,1); */
+  background-color: #FAF8F5;
   font-family: Helvetica, sans-serif;
   color: #773C03;
   font-size: 15px;
@@ -17,10 +18,12 @@ img {
   height: 320px;
   margin: 10px;
   display: block;
-  -webkit-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
-  filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   object-fit: cover;
   border-radius: 15px;
+  -webkit-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
+  -moz-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
+  -ms-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
+  filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 10px #aaa);
 }
 
 /* .container {
@@ -132,17 +135,19 @@ h3 {
   transition: all 1.3s ease;
   border-radius: 100%;
   -webkit-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
-  /* don't need in firefox? or maybe in older versions? */
   -moz-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
+  -ms-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
 }
 
 .ingredient-image:hover {
   -webkit-transform: scale(1.6);
   -moz-transform: scale(1.6);
+  -ms-transform: scale(1.6);
   transform: scale(1.6);
   -webkit-transition: all 1.3s ease;
   -moz-transition: all 1.3s ease;
+  -ms-transition: all 1.3s ease;
   transition: all 1.3s ease;
 }
 
@@ -161,6 +166,7 @@ h3 {
 .brighten {
   -webkit-filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   -moz-filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
+  -ms-filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   filter: brightness(1.3) saturate(85%) drop-shadow(15px 15px 10px #aaa);
 }
 
@@ -246,12 +252,6 @@ header {
   cursor: pointer;
 }
 
- .hidden {
-/*  visibility: hidden;
-*/  height: 0%;
-  width: 0%;
-} 
-
 li strong, li b {
   color: #e07d80;
   font-weight: 500;
@@ -266,9 +266,11 @@ a {
 .purchased {
   -webkit-filter: saturate(0%) contrast(180%) drop-shadow(3px 3px 1px #555) opacity(0.7);
   -moz-filter: saturate(0%) contrast(180%) drop-shadow(3px 3px 1px #555) opacity(0.7);
+  -ms-filter: saturate(0%) contrast(180%) drop-shadow(3px 3px 1px #555) opacity(0.7);
   filter: saturate(0%) contrast(180%) drop-shadow(3px 3px 1px #555) opacity(0.7);
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 
@@ -304,10 +306,4 @@ a {
   font-size: 1.1rem;
   text-transform: lowercase;
   font-weight: 100;
-} 
-
-/*#moz-round-image {
-  width: 60px;
-  height: 60px;
-  background: url(./images/)
-}*/
+}
