--- a/recipe_safari.css
+++ b/recipe_safari.css
@@ -1,5 +1,4 @@
 html {
-/*   background-color: hsla(34,31%,97%,1); */
   background-color: #FAF8F5;
   font-family: Helvetica, sans-serif;
   color: #773C03;
@@ -21,7 +20,7 @@ img {
   object-fit: cover;
   border-radius: 15px;
   -webkit-filter: brightness(115%) saturate(85%);
-  filter: brightness(115%) saturate(85%);
+  box-shadow: 15px 15px 10px #aaa;
 }
 
 h1, h2, h3, h4, #hide-images {
@@ -109,7 +108,6 @@ h3 {
   object-fit: cover;
   border-radius: 100%;
   -webkit-filter: brightness(1.2) saturate(85%);
-  filter: brightness(1.2) saturate(85%);
   -webkit-transition: all 1.3s ease;
   transition: all 1.3s ease;
 }
@@ -131,11 +129,6 @@ h3 {
 
 .equipment-list {
   width: 55%;
-}
-
-.brighten {
-  -webkit-filter: brightness(1.3) saturate(85%);
-  filter: brightness(1.3) saturate(85%);
 }
 
 .cook-time-info {
@@ -233,8 +226,8 @@ a {
 
 .purchased {
   opacity: 0.7;
-  -webkit-filter: saturate(0%) contrast(180%);
-  filter: saturate(0%) contrast(180%);
+  box-shadow: 3px 3px 2px #666;
+  -webkit-filter: saturate(0%) contrast(180%); 
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
