--- a/recipe.css
+++ b/recipe.css
@@ -13,24 +13,20 @@ html {
 }
 
 img {
-  width: 510px;
-  height: 320px;
-  margin: 10px;
   display: block;
   object-fit: cover;
-  border-radius: 15px;
   -webkit-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
   -moz-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
   -ms-filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 0.8em #777);
   filter: brightness(115%) saturate(85%) drop-shadow(15px 15px 10px #aaa);
 }
 
-h1, h2, h3, h4, #hide-images {
+h1, h2, h3, h4, .ingredient-note, #hide-images {
   font-family: Didot, serif;
 }
 
 h1 {
-  line-height: 1.0;
+  line-height: 2.7rem;
 }
 
 h2 {
@@ -39,19 +35,20 @@ h2 {
 
 h3 {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 1.3rem;
   text-transform: uppercase;
-  padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 10px;
 }
 
-#intro-image {
-  width: 410px;
-  margin-left: 50px;
-  margin-right: 100px;
-  margin-bottom: 50px;
-  margin-top: 150px;
+#intro-image img {
+  width: 510px;
+  height: 320px;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-top: -430px;
+  border-radius: 15px;
   float: right;
 }
 
@@ -60,26 +57,18 @@ h3 {
   list-style-type: none;
   background-color: #eee;
   padding-top: 12px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   padding-left: 10px;
   width: 100%;
-  margin-bottom: 3rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 3em;
 }
 
 .ingredient-list-item {
   position: relative;
   cursor: pointer;
   display: inline;
-  margin: 0.6rem;
-}
-
-.list-item {
-  position: relative;
-  cursor: pointer;
-  display: inline;
-  margin: 10px;
+  margin-right: 1.2em;
+  margin-left: 1.3em;
 }
 
 .ingredient-text-popup {
@@ -107,8 +96,8 @@ h3 {
   width: 60px;
   height: 60px;
   display: inline;
-  object-fit: cover;
   border-radius: 100%;
+  margin-top: 17px;
   -webkit-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   -moz-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
   -ms-filter: brightness(1.2) saturate(85%) drop-shadow(15px 15px 10px #aaa);
@@ -125,21 +114,20 @@ h3 {
   -ms-transform: scale(1.6);
   transform: scale(1.6);
   -webkit-transition: all 1.3s ease;
-  -moz-transition: all 1.3s ease; */
+  -moz-transition: all 1.3s ease;
   -ms-transition: all 1.3s ease;
   transition: all 1.3s ease;
 }
 
 .ingredient-text-only-display {
   display: inline-block;
-  width: 5.5rem;
+  width: 5rem;
+  margin-left: -10px;
+  margin-right: -3px;
+  margin-top: 10px;
   text-align: left;
   vertical-align: top;
   font-size: 0.95rem;
-}
-
-.equipment-list {
-  width: 55%;
 }
 
 .brighten {
@@ -150,7 +138,7 @@ h3 {
 }
 
 .cook-time-info {
-  margin: 60px 0px 40px 10px;
+  margin: 20px 0px 40px 10px;
   padding-left: 15px;
 }
 
@@ -161,7 +149,7 @@ h3 {
 }
 
 .intro {
-  width: 50%;
+  width: 45%;
   margin-top: 30px;
   padding: 10px;
   text-align: justify;
@@ -173,11 +161,12 @@ h3 {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   background-color: #eee;
   border-radius: 10px;
-  padding-right: 2%;
-  padding-top: 0.1rem;
-  padding-bottom: 1rem;
+  padding-right: 20px;
+  padding-top: 0.1em;
+  padding-bottom: 1em;
 }
 
 .process h3 {
@@ -193,11 +182,13 @@ h3 {
   text-align: justify;
 }
 
-.process-image-large {
+.process-image {
   position: relative;
-  height: 19rem;
-  width: 30rem;
-  margin-bottom: 2rem;
+  border-radius: 10px;
+  height: 300px;
+  width: 75%;
+  object-fit: cover;
+  margin-bottom: 3em;
   margin-left: auto;
   margin-right: auto;
 }
@@ -205,13 +196,11 @@ h3 {
 header {
   z-index: 1;
   background-color: beige;
-  padding-left: 30px;
-  padding-top: 2px;
+  padding-left: 35px;
   position: fixed;
   top: 0px;
   left: 0px;
   right: 0px;
-  font-family: Didot, serif;
 }
 
 #hide-images {
@@ -236,12 +225,6 @@ li strong, li b {
   font-weight: 500;
 }
 
-a {
-  color: #E07D80;
-  text-decoration: none;
-  font-weight: 600;
-}
-
 .purchased {
   opacity: 0.7;
   -webkit-filter: saturate(0%) contrast(180%) drop-shadow(3px 3px 1px #555);
@@ -255,20 +238,19 @@ a {
 }
 
 .text-purchased:before {
-  content: '✓ ';
+  content: 'Ã¢Å“â€œ ';
 }
 
 .ingredient-note {
   display: inline-block;
   text-align: center;
   width: 100%;
-  font-family: Didot, serif;
   padding-left: 10px;
   padding-bottom: 10px;
 }
 
 .slide-button {
-  width: 20%;
+  width: 120px;
   text-align: center;
   border: 0.1rem solid #bbb;
   border-radius: 5px;
@@ -282,8 +264,22 @@ a {
   background-color: #DCC5C6;
 }
 
- .bookmark-note {
-  font-size: 1.1rem;
-  text-transform: lowercase;
-  font-weight: 100;
+footer {
+  text-align: center;
+  width: 100%;
+}
+
+a {
+  color: #e07d80;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+footer a:hover {
+  color: #BD2D4C;
+}
+
+footer p {
+  font-size: 1.1em;
+  font-family: Didot, serif;
 }
