--- a/recipe.css
+++ b/recipe.css
@@ -42,8 +42,8 @@ h3 {
 }
 
 #intro-image img {
-  width: 510px;
-  height: 320px;
+  width: 50%;
+  max-height: 320px;
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 10px;
@@ -161,7 +161,7 @@ h3 {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
+  margin-bottom: 60px;
   background-color: #eee;
   border-radius: 10px;
   padding-right: 20px;
@@ -187,7 +187,6 @@ h3 {
   border-radius: 10px;
   height: 300px;
   width: 75%;
-  object-fit: cover;
   margin-bottom: 3em;
   margin-left: auto;
   margin-right: auto;
